# GeoWordlists

./: GeoWordlists.py  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: banner.pdn
.github/workflows/: first_run.yml  python-pip-build.yml
geowordlists/: __init__.py  __main__.py  utils.py
geowordlists/countries/: france.py
geowordlists/data/_geonames/: generate.py
geowordlists/data/algeria/: data.json
geowordlists/data/american_samoa/: data.json
geowordlists/data/andorra/: data.json
geowordlists/data/argentina/: data.json
geowordlists/data/australia/: data.json
geowordlists/data/austria/: data.json
geowordlists/data/azerbaijan/: data.json
geowordlists/data/bangladesh/: data.json
geowordlists/data/belarus/: data.json
geowordlists/data/belgium/: data.json
geowordlists/data/bermuda/: data.json
geowordlists/data/brazil/: data.json
geowordlists/data/bulgaria/: data.json
geowordlists/data/chile/: data.json
geowordlists/data/colombia/: data.json
geowordlists/data/costa_rica/: data.json
geowordlists/data/croatia/: data.json
geowordlists/data/cyprus/: data.json
geowordlists/data/czechia/: data.json
geowordlists/data/denmark/: data.json
geowordlists/data/dominican_republic_the/: data.json
geowordlists/data/estonia/: data.json
geowordlists/data/faroe_islands_the/: data.json
geowordlists/data/finland/: data.json
geowordlists/data/france/: update.py
geowordlists/data/french_guiana/: data.json
geowordlists/data/germany/: data.json
rules/: default.yml  test.py
wordlists/france/: all_french_cities.txt
(+50 files in other folders)
